src/Containers/App/App.scss
$color-green-primary: #34e89e;
$color-green-secondary: #0f3443;
$color-gray: #999999;

.navbar-wrapper {
  border-bottom: 1px solid #cccccc;
}

.iframe {
  width: 100%;
  height: auto;
}
.course-timeline {
  bottom: -2.23em;
  position: absolute;
  width: 100%;
  background-color: rgba(255,255,255,0.4);
}
iframe.wikipedia {
  min-height: 70vh;
  width: 100%;
}
.bg-gradient {
  color: white;
}
.bg-gradient {
  .course-thumb {
    color: black;
  }
}
.bg-white {
  background-color: white;
}
.bg-subtle:before {
    content: "";
    width: 100%;
    height: 100%;
    opacity: 0.05;
    display: block;
    position: absolute;
    left: 0;
    top: 0;
}
.bg-subtle-diamond:before {
  background-image: url("/diamond-subtle.png");
}
.bg-subtle-cubes:before {
  background-image: url("/cubes-subtle.png");
}
.bg-subtle-roman-tile:before {
  background-image: url("/roman-tile-subtle.png");
}
.bg-subtle-hex:before {
  background-image: url("/hex-subtle.png");
}
.bg-subtle-swirls:before {
  background-image: url("/swirls-subtle.png");
}
.bg-gradient {
  input.form-control,
  textarea.form-control {
    color: white;
    background: none;
    &:focus {
      color: white;
    }
    &.border-bottom {
      border-top: 0;
      border-right: 0;
      border-left: 0;
      border-radius: 0;
      border-bottom-width: 2px;
    }
    &::placeholder {
      color: white;
      opacity: 0.5;
    }
  }
}
.color-red {
  color: red;
}
.bg-gradient input.form-control {
  background: none;
  border-bottom-color: white;
}
.bg-gradient textarea.form-control {
  background: rgba(255, 255, 255, 0.1);
  border-bottom-color: white;
}
.course-show {
  height: 100vh;
  position: relative;
}
.courses-index {
  padding-bottom: 3em;
}
.card-img-top {
  padding: 0 0.5em;
}
.course-progress {
  position: fixed;
  bottom: 0;
  left: 10%;
  right: -10%;
  width: 80%;


  .btn-link {
    color: black;
  }
  .progress-bar {
    background-color: #aaaaaa;
  }
  .timeline-icon {
    display: inline-block;
  }
}
.challenge-description {
  padding-right: 1em;
}
.simple_q_and_a-question {
  margin-top: 25vh;
}
.simple_q_and_a-feedback,
.wikipedia_notes-feedback {
  text-align: left;
  background-color: white;
  padding: 0.5em 1em;
  opacity: 0.8;
  color: #222222;
  p {
    margin-bottom: 0;
  }
}
.simple_signup-callToActionText {
  margin-top: 25vh;
}
.simple_start-start {
  margin-top: 25vh;
}
.simple_start-icon {
  font-size: 6em;
}
.full-height {
  height: 100%;
}
.course-thumb {
  h1 {
    padding-top: 0.5em;
    font-size: 4em;
  }
  ul {
    margin-bottom: 0;
  }
}
.course-show .course-title {
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
}
.course-title-timeline {
  margin: 0.2em;
  opacity: 0.6;
}
.navbar-logo {
  max-height: 1.6em;
  max-width: 1.6em;
  fill: red;
  vertical-align: middle;
}
// bootstrap button
.btn-outline-secondary {
  color: #fff;
  background-image: none;
  background-color: transparent;
  border-color: #fff;
}

.btn-outline-secondary:hover {
  color: #000;
  background-color: #fff;
  border-color: #fff;
}

.btn-outline-secondary:focus, .btn-outline-secondary.focus {
  -webkit-box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
          box-shadow: 0 0 0 2px rgba(204, 204, 204, 0.5);
}

.btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
  color: #fff;
  background-color: transparent;
}

.btn-outline-secondary:active, .btn-outline-secondary.active,
.show > .btn-outline-secondary.dropdown-toggle {
  color: #000;
  background-color: #fff;
  border-color: #fff;
}
.bg-gradient .btn-link {
  color: white;
}
.btn-link-inline {
  margin: 0;
  padding: 0;
  border: 0;
  border-bottom: 1px solid white;
  color: inherit;
  background: none;
}
.dictionary-wrapper {
  display: inline;
}
.btn-timeline {
  display: inline-block;
  position:relative;
  &.skipped {
    color: #333333;
    &.active {
      color: inherit;
    }
  }
  &.btn.disabled,
  &.btn:disabled {
    opacity: 0.2;
  }
}

